2007-05-30 Hal Rosenstock <halr@voltaire.com>

	* scripts/ibrouters.in, scripts/ibprintrt.pl,
	  man/ibrouters.8, man/ibprintrt.8: Add scripts and man pages
	  for display of IB routers

	* scripts/ibqueryerrors.pl: Add GUID to output line for ports 

	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
	  scripts/ibcheckportstate.in, scripts/ibcheckportwidth.in,
	  scripts/ibdatacounts.in: Add lid and port into verbose output

	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
	  scripts/ibdatacounts.in: Changed portnum to port in output

	* Makefile.am, configure.in: Added ibdatacounts

	* scripts/ibdatacounts.in, man/ibdatacounts.8: Add script
	  to display only data counters and associated man page

2007-05-26 Hal Rosenstock <halr@voltaire.com>

	* scripts/IBswcountlimits.pm: Fix node description parsing
	  for switches

	* scripts/iblinkinfo.pl: Add peer port link width and speed
	  validation

2007-05-25 Hal Rosenstock <halr@voltaire.com>

	* scripts/IBswcountlimits.pm: Add support for routers

	* scripts/iblinkinfo.pl: Display remote LID with peer port info

	* scripts/IBswcountlimits.pm: Add support for rem_lid in
	  get_link_ends subroutine 

	* src/ibportstate.c: Handle peer ports at 1x that
	  should be wider and 2.5 Gbps that should be faster

	* src/ibportstate.c: Add LinkSpeed/Width related components
	  to output

2007-05-24 Hal Rosenstock <halr@voltaire.com>

	* scripts/ibprintca.pl: Add support for routers

2007-05-23 Hal Rosenstock <halr@voltaire.com>

	* scripts/ibcheckerrors.in, scripts/ibchecknet.in,
	  scripts/ibcheckstate.in, scripts/ibcheckwidth.in,
	  scripts/ibclearcounters.in, scripts/ibclearerrors.in,
	  scripts/ibfindnodesusing.in, scripts/IBswcountlimits.pm:
	  Add support for routers

2007-05-09 Hal Rosenstock <halr@voltaire.com>

	* src/grouping.c: Eliminate conditional compilation
	  based on WORDSIZE

2007-05-08 Hal Rosenstock <halr@voltaire.com>

	* src/ibnetdiscover.c: Bumped build version
